# internship-crm

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.claude/skills/internship-crm/: SKILL.md
accounts/: admin.py  admin_mixins.py  models.py  services.py  test_services.py  tests.py
accounts/api/: urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_managerinvitetoken.py  0003_create_groups.py
bot/: api_client.py  main.py  settings.py
bot/managers_bot/: handlers.py
bot/student_bot/: handlers.py
common/: import_utils.py
companies/: admin.py  imports.py  models.py  services.py  test_imports.py  tests.py
companies/migrations/: 0001_initial.py  0002_company_status_changed_at_and_more.py
crm/: settings.py  urls.py
data/sample/: companies.csv  students.csv
nginx/: prod.conf
notifications/: admin.py  dashboard.py  models.py  services.py  test_broadcast.py  test_dashboard.py  test_manual_contacts.py  test_push_rules.py  urls.py  views.py
notifications/api/: urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_seed_default_rules.py
placements/: admin.py  models.py  services.py  tests.py
placements/migrations/: 0001_initial.py
scripts/: backup_cron.sh  backup_db.sh
static/admin/css/: admin_custom.css
students/: admin.py  imports.py  models.py  services.py  test_api.py  test_imports.py  test_services.py  tests.py
students/api/: urls.py  views.py
students/migrations/: 0001_initial.py
templates/admin/: index.html
(+12 files in other folders)
