[project]
name = "internship-crm"
version = "0.1.0"
description = "Internal CRM for managing students, partner companies, and internships"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "psycopg2-binary>=2.9",
    "django-q2>=1.7",
    "aiogram>=3.4",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "dj-database-url>=2.1",
    "httpx>=0.27",
    "gunicorn>=21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "crm.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
